--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5303],[[4,5,6,0,[],[1,34,5263],[[7,8,9,0,[],[1,36,5192],[[10,11,12,0,[],[1,38,5144],[],[[13,0,1,0,[14],[1,205,3143],[]],[15,0,1,0,[14],[1,3349,1397],[]],[16,0,1,0,[14],[1,4747,434],[]]],[],[3,3,3,3]],[17,18,19,0,[],[1,5185,31],[],[[20,0,1,0,[14],[1,5198,5],[]],[21,0,1,0,[14],[1,5209,5],[]]],[],[2,2,2,2]]],[],[],[5,5,5,5]],[22,23,24,0,[],[1,5234,57],[[25,26,27,0,[],[1,5240,19],[],[[20,0,1,0,[28],[1,5246,2],[]],[21,0,1,0,[28],[1,5251,4],[]]],[],[2,2,2,2]],[29,30,31,0,[],[1,5264,20],[],[[20,0,1,0,[28],[1,5271,3],[]],[21,0,1,0,[28],[1,5276,5],[]]],[],[2,2,2,2]]],[],[],[4,4,4,4]]],[],[],[9,9,9,9]]],[],[],[9,9,9,9]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5860],[[4,5,6,0,[],[1,34,5816],[[7,8,9,0,[],[1,37,5804],[[10,11,12,0,[],[1,44,5757],[],[[13,0,1,0,[14],[1,168,3106],[]],[15,0,1,0,[14],[1,3276,925],[]],[16,0,1,0,[14],[1,4203,490],[]],[17,0,1,0,[14],[1,4696,1102],[]]],[],[4,4,4,4]],[18,19,20,0,[],[1,5804,27],[],[[21,0,1,0,[14],[1,5821,2],[]],[22,0,1,0,[14],[1,5828,1],[]]],[],[2,2,2,2]]],[],[],[6,6,6,6]]],[],[],[6,6,6,6]]],[],[],[6,6,6,6]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*Api Case","*D:\\all_case\\case\\api_case","*case/api_case","*Logistics","*D:\\all_case\\case\\api_case\\logistics","*case/api_case/logistics","*Car Basc Info","*D:\\all_case\\case\\api_case\\logistics\\car_basc_info.robot","*case/api_case/logistics/car_basc_info.robot","*验证获取车辆基本信息 -- wl001000","*logistics","*验证新增/删除车辆信息 -- wl001001","*验证修改车辆信息-- wl001002","*Case02","*D:\\all_case\\case\\api_case\\logistics\\case02.robot","*case/api_case/logistics/case02.robot","*验证 - case02里面的ccccc","*验证 - case02里面的ddddd","*Model 2","*D:\\all_case\\case\\api_case\\model_2","*case/api_case/model_2","*Case03","*D:\\all_case\\case\\api_case\\model_2\\case03.robot","*case/api_case/model_2/case03.robot","*model_2","*Case04","*D:\\all_case\\case\\api_case\\model_2\\case04.robot","*case/api_case/model_2/case04.robot"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*Api Case","*D:\\all_case\\case\\api_case","*case/api_case","*Logistics","*D:\\all_case\\case\\api_case\\logistics","*case/api_case/logistics","*Car Basc Info","*D:\\all_case\\case\\api_case\\logistics\\car_basc_info.robot","*case/api_case/logistics/car_basc_info.robot","*验证获取车辆基本信息 -- wl001000","*logistics","*验证新增/删除车辆信息 -- wl001001","*验证修改车辆信息-- wl001002","*验证查询车辆信息-- wl001003","*Case02","*D:\\all_case\\case\\api_case\\logistics\\case02.robot","*case/api_case/logistics/case02.robot","*验证 - case02里面的ccccc","*验证 - case02里面的ddddd"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"Critical Tests","pass":9},{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":9}],[{"elapsed":"00:00:05","fail":0,"label":"logistics","pass":5},{"elapsed":"00:00:00","fail":0,"label":"model_2","pass":4}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Case","name":"Case","pass":9},{"elapsed":"00:00:05","fail":0,"id":"s1-s1","label":"Case.Api Case","name":"Api Case","pass":9},{"elapsed":"00:00:05","fail":0,"id":"s1-s1-s1","label":"Case.Api Case.Logistics","name":"Logistics","pass":5},{"elapsed":"00:00:05","fail":0,"id":"s1-s1-s1-s1","label":"Case.Api Case.Logistics.Car Basc Info","name":"Car Basc Info","pass":3},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1-s2","label":"Case.Api Case.Logistics.Case02","name":"Case02","pass":2},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s2","label":"Case.Api Case.Model 2","name":"Model 2","pass":4},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s2-s1","label":"Case.Api Case.Model 2.Case03","name":"Case03","pass":2},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s2-s2","label":"Case.Api Case.Model 2.Case04","name":"Case04","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"Critical Tests","pass":6},{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":6}],[{"elapsed":"00:00:06","fail":0,"label":"logistics","pass":6}],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Case","name":"Case","pass":6},{"elapsed":"00:00:06","fail":0,"id":"s1-s1","label":"Case.Api Case","name":"Api Case","pass":6},{"elapsed":"00:00:06","fail":0,"id":"s1-s1-s1","label":"Case.Api Case.Logistics","name":"Logistics","pass":6},{"elapsed":"00:00:06","fail":0,"id":"s1-s1-s1-s1","label":"Case.Api Case.Logistics.Car Basc Info","name":"Car Basc Info","pass":4},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1-s2","label":"Case.Api Case.Logistics.Case02","name":"Case02","pass":2}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1553499038538;
+window.output["baseMillis"] = 1553562014188;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5337;
+window.output["generated"] = 5889;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
