--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,4894],[[4,5,6,0,[],[0,53,4824],[[7,8,9,0,[],[0,58,4807],[[10,11,12,0,[],[0,64,4717],[],[[13,0,1,0,[14],[0,312,2806,15],[]],[16,0,1,0,[14],[1,3121,991],[]],[17,0,1,0,[14],[1,4116,398],[]],[18,0,1,0,[14],[1,4518,259],[]]],[],[4,3,4,3]],[19,20,21,0,[],[1,4791,57],[],[[22,0,1,0,[14],[1,4820,10],[]],[23,0,1,0,[14],[1,4833,13],[]]],[],[2,2,2,2]]],[],[],[6,5,6,5]]],[],[],[6,5,6,5]]],[],[],[6,5,6,5]];
+window.output["suite"] = [1,2,3,0,[],[0,0,42028],[[4,5,6,0,[],[0,47,41977],[[7,8,9,0,[],[0,16146,22442],[[10,11,12,0,[],[0,23105,15479],[],[[13,0,1,0,[14],[0,23120,15461,15],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*Api Case","*D:\\all_case\\case\\api_case","*case/api_case","*Logistics","*D:\\all_case\\case\\api_case\\logistics","*case/api_case/logistics","*Car Basc Info","*D:\\all_case\\case\\api_case\\logistics\\car_basc_info.robot","*case/api_case/logistics/car_basc_info.robot","*验证获取车辆基本信息 -- wl001000","*logistics","*1 != 0 : 验证'errCode': 0,","*验证新增/删除车辆信息 -- wl001001","*验证修改车辆信息-- wl001002","*验证查询车辆信息-- wl001003","*Case02","*D:\\all_case\\case\\api_case\\logistics\\case02.robot","*case/api_case/logistics/case02.robot","*验证 - case02里面的ccccc","*验证 - case02里面的ddddd"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*UI case","*D:\\all_case\\case\\UI_case","*case/UI_case","*LGT","*D:\\all_case\\case\\UI_case\\LGT","*case/UI_case/LGT","*Carbascinfo","*D:\\all_case\\case\\UI_case\\LGT\\carbascinfo.robot","*case/UI_case/LGT/carbascinfo.robot","*添加车辆信息 -- LGT0010000","*logisticsUI","*添加车辆的功能异常"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":1,"label":"Critical Tests","pass":5},{"elapsed":"00:00:04","fail":1,"label":"All Tests","pass":5}],[{"elapsed":"00:00:04","fail":1,"label":"logistics","pass":5}],[{"elapsed":"00:00:05","fail":1,"id":"s1","label":"Case","name":"Case","pass":5},{"elapsed":"00:00:05","fail":1,"id":"s1-s1","label":"Case.Api Case","name":"Api Case","pass":5},{"elapsed":"00:00:05","fail":1,"id":"s1-s1-s1","label":"Case.Api Case.Logistics","name":"Logistics","pass":5},{"elapsed":"00:00:05","fail":1,"id":"s1-s1-s1-s1","label":"Case.Api Case.Logistics.Car Basc Info","name":"Car Basc Info","pass":3},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1-s2","label":"Case.Api Case.Logistics.Case02","name":"Case02","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:15","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:15","fail":1,"label":"logisticsUI","pass":0}],[{"elapsed":"00:00:42","fail":1,"id":"s1","label":"Case","name":"Case","pass":0},{"elapsed":"00:00:42","fail":1,"id":"s1-s1","label":"Case.UI case","name":"UI case","pass":0},{"elapsed":"00:00:22","fail":1,"id":"s1-s1-s1","label":"Case.UI case.LGT","name":"LGT","pass":0},{"elapsed":"00:00:15","fail":1,"id":"s1-s1-s1-s1","label":"Case.UI case.LGT.Carbascinfo","name":"Carbascinfo","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1553602627730;
+window.output["baseMillis"] = 1556610049155;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4936;
+window.output["generated"] = 42041;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
