--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,40539],[[4,5,6,0,[],[0,47,40490],[[7,8,9,0,[],[0,14138,22942],[[10,11,12,0,[],[0,21436,15642],[],[[13,0,1,0,[14],[0,21457,15619,15],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,55914],[[4,5,6,0,[],[1,27,55885],[[7,8,9,0,[],[1,29,55880],[[10,11,12,0,[],[1,30,55878],[],[[13,0,1,0,[14],[1,205,55702],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*UI case","*D:\\all_case\\case\\UI_case","*case/UI_case","*LGT","*D:\\all_case\\case\\UI_case\\LGT","*case/UI_case/LGT","*Carbascinfo","*D:\\all_case\\case\\UI_case\\LGT\\carbascinfo.robot","*case/UI_case/LGT/carbascinfo.robot","*添加车辆信息 -- LGT0010000","*logisticsUI","*添加车辆的功能异常"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*Api Case","*D:\\all_case\\case\\api_case","*case/api_case","*MAIN PROCESS","*D:\\all_case\\case\\api_case\\MAIN_PROCESS","*case/api_case/MAIN_PROCESS","*Main Process","*D:\\all_case\\case\\api_case\\MAIN_PROCESS\\main_process.robot","*case/api_case/MAIN_PROCESS/main_process.robot","*验证获取车辆基本信息 -- Main0009000","*main"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:16","fail":1,"label":"logisticsUI","pass":0}],[{"elapsed":"00:00:41","fail":1,"id":"s1","label":"Case","name":"Case","pass":0},{"elapsed":"00:00:40","fail":1,"id":"s1-s1","label":"Case.UI case","name":"UI case","pass":0},{"elapsed":"00:00:23","fail":1,"id":"s1-s1-s1","label":"Case.UI case.LGT","name":"LGT","pass":0},{"elapsed":"00:00:16","fail":1,"id":"s1-s1-s1-s1","label":"Case.UI case.LGT.Carbascinfo","name":"Carbascinfo","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:56","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:56","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:56","fail":0,"label":"main","pass":1}],[{"elapsed":"00:00:56","fail":0,"id":"s1","label":"Case","name":"Case","pass":1},{"elapsed":"00:00:56","fail":0,"id":"s1-s1","label":"Case.Api Case","name":"Api Case","pass":1},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1","label":"Case.Api Case.MAIN PROCESS","name":"MAIN PROCESS","pass":1},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1-s1","label":"Case.Api Case.MAIN PROCESS.Main Process","name":"Main Process","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1556618966757;
+window.output["baseMillis"] = 1557538255994;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 40575;
+window.output["generated"] = 55929;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
