提交测试代码

--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,60012],[[4,5,6,0,[],[1,37,59974],[[7,8,9,0,[],[1,39,59970],[[10,11,12,0,[],[1,41,59966],[],[[13,0,1,0,[14],[1,192,59814],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,62421],[[4,5,6,0,[],[1,30,62389],[[7,8,9,0,[],[1,32,62385],[[10,11,12,0,[],[1,34,62381],[],[[13,0,1,0,[14],[1,194,62219],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Case","*D:\\all_case\\case","*case","*Api Case","*D:\\all_case\\case\\api_case","*case/api_case","*MAIN PROCESS","*D:\\all_case\\case\\api_case\\MAIN_PROCESS","*case/api_case/MAIN_PROCESS","*Main Process","*D:\\all_case\\case\\api_case\\MAIN_PROCESS\\main_process.robot","*case/api_case/MAIN_PROCESS/main_process.robot","*验证主流程 -- Main0009000","*main"]);
+window.output["strings"] = window.output["strings"].concat(["*","*主流程测试","*D:\\all_case\\case","*case","*Api Case","*D:\\all_case\\case\\api_case","*case/api_case","*MAIN PROCESS","*D:\\all_case\\case\\api_case\\MAIN_PROCESS","*case/api_case/MAIN_PROCESS","*Main Process","*D:\\all_case\\case\\api_case\\MAIN_PROCESS\\main_process.robot","*case/api_case/MAIN_PROCESS/main_process.robot","*验证主流程 -- Main0009000","*main"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:00","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:00","fail":0,"label":"main","pass":1}],[{"elapsed":"00:01:00","fail":0,"id":"s1","label":"Case","name":"Case","pass":1},{"elapsed":"00:01:00","fail":0,"id":"s1-s1","label":"Case.Api Case","name":"Api Case","pass":1},{"elapsed":"00:01:00","fail":0,"id":"s1-s1-s1","label":"Case.Api Case.MAIN PROCESS","name":"MAIN PROCESS","pass":1},{"elapsed":"00:01:00","fail":0,"id":"s1-s1-s1-s1","label":"Case.Api Case.MAIN PROCESS.Main Process","name":"Main Process","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:02","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:02","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:02","fail":0,"label":"main","pass":1}],[{"elapsed":"00:01:02","fail":0,"id":"s1","label":"主流程测试","name":"主流程测试","pass":1},{"elapsed":"00:01:02","fail":0,"id":"s1-s1","label":"主流程测试.Api Case","name":"Api Case","pass":1},{"elapsed":"00:01:02","fail":0,"id":"s1-s1-s1","label":"主流程测试.Api Case.MAIN PROCESS","name":"MAIN PROCESS","pass":1},{"elapsed":"00:01:02","fail":0,"id":"s1-s1-s1-s1","label":"主流程测试.Api Case.MAIN PROCESS.Main Process","name":"Main Process","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1557815791214;
+window.output["baseMillis"] = 1557986315667;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 60059;
+window.output["generated"] = 62472;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
